--- a/feature-cardeditor/src/main/res/drawable/ic_editor_tool_align_left.xml
+++ b/feature-cardeditor/src/main/res/drawable/ic_editor_tool_align_left.xml
@@ -1,9 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="24dp"
-        android:height="24dp"
-        android:viewportWidth="24.0"
-        android:viewportHeight="24.0">
-    <path
-        android:fillColor="#FF000000"
-        android:pathData="M15,15L3,15v2h12v-2zM15,7L3,7v2h12L15,7zM3,13h18v-2L3,11v2zM3,21h18v-2L3,19v2zM3,3v2h18L21,3L3,3z"/>
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+  <path
+      android:fillColor="@android:color/black"
+      android:pathData="M11,16l-0,-3L21,13l-0,-2l-10,0L11,8l-4,4 4,4zM5,4l-2,0l-0,16l2,0L5,4z"/>
 </vector>
