--- a/feature-cardeditor/src/main/res/drawable/ic_editor_tool_align_right.xml
+++ b/feature-cardeditor/src/main/res/drawable/ic_editor_tool_align_right.xml
@@ -1,9 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="24dp"
-        android:height="24dp"
-        android:viewportWidth="24.0"
-        android:viewportHeight="24.0">
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
     <path
-        android:fillColor="#FF000000"
-        android:pathData="M3,21h18v-2L3,19v2zM9,17h12v-2L9,15v2zM3,13h18v-2L3,11v2zM9,9h12L21,7L9,7v2zM3,3v2h18L21,3L3,3z"/>
+        android:fillColor="@android:color/black"
+        android:pathData="M13,8l-0,3l-10,0l-0,2L13,13l-0,3l4,-4 -4,-4zM21,4l-2,0l-0,16L21,20L21,4z" />
 </vector>
